Validate `url()` with `URI` instead of the `URL(String)` constructor
`URL(String)` silently strips leading and trailing characters up to
`' '` before parsing, so `url()` reported values as valid that
`URI.create()` rejects. The constructor is also deprecated since JDK 20
because what it validates is implementation dependent.

Parse with `URI.create(x).toURL()` instead. Going as far as `toURL()`
keeps the current meaning of the constraint, that the value resolves as
a URL with a known scheme, rather than accepting any URI syntax.

This is a breaking change. Values that passed before and are now
rejected: leading/trailing whitespace, unencoded characters such as
spaces and brackets, and an empty authority (`http://`).

Fixes gh-502

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HG69dJkSwkSdJwL1G9KRNC